Closed Bug 716126 Opened 14 years ago Closed 14 years ago

Include update.status contents inside maintenanceservice.log file on failed updates

Categories

(Toolkit :: Application Update, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla12

People

(Reporter: bbondy, Assigned: bbondy)

References

Details

Attachments

(1 file)

Include the contents of the update.status file inside the maintenanceservice.log file on failed updates. This will give us more visibility into reported problems when the update information no longer exists.
Attached patch Patch v1.Splinter Review
- Log update.status result inside maintenanceservice.log - Fixed a couple of wrong checks for can't open file - Increased service logs to 10. I'd also like to add support for keeping multiple update.log files but that will be done another time in another bug.
Attachment #586611 - Flags: review?(robert.bugzilla)
Attachment #586611 - Flags: review?(robert.bugzilla) → review+
Target Milestone: --- → mozilla12
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: