Bug 716126 - Include update.status contents inside maintenanceservice.log file on failed updates. r=rstrong